name:                todo-client
version:             0.1.0.0
synopsis:            Simple todo client
description:         Practice project for NYC Haskell community
license:             PublicDomain
license-file:        LICENSE
author:              Eric Jones
maintainer:          ejones@stackbuilders.com
copyright:           Public
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable todo-client
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8,
                       ghcjs-dom,
                       ghcjs-jquery,
                       blaze-html >= 0.7.0.0,
                       mtl         == 2.2.*,
                       sodium,
                       web-routes == 0.27.*,
                       web-routes-th >= 0.22,
                       ghcjs-base == 0.1.0.0,
                       safecopy,
                       text,
                       bytestring,
                       transformers == 0.4.1.0,
                       clay,
                       network
                       
  hs-source-dirs:      src
  default-language:    Haskell2010